game-of-life-hex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-of-life-hex
  namespace: game-of-life-hex
spec:
  selector:
    app: game-of-life-hex
  ports:
    - port: 80
      targetPort: web
      name: web
